--- a/capstone1/index.html
+++ b/capstone1/index.html
@@ -17,26 +17,30 @@
 
 	<body class="bg-secondary">
 		<!--Navbar-->
-		<nav class="navbar navbar-expand-sm bg-dark">
+		<nav class="navbar navbar-expand-lg bg-dark">
 
 		  <div class="container-fluid">
+		  	<button class="navbar-toggler ms-sm-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		  	  <span class="navbar-toggler-icon"></span>
+		  	</button>
 		    <!-- Links -->
-		    <ul class="navbar-nav">
-		      <li class="nav-item">
-		        <a class="nav-link" href="#landing">About</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#projects">Projects</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#contact">Contact</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#tools">Tools</a>
-		      </li>
-		    </ul>
+		    <div class="collapse navbar-collapse" id="navbarNav">
+		    	<ul class="navbar-nav">
+		    	  <li class="nav-item">
+		    	    <a class="nav-link" href="#landing">About</a>
+		    	  </li>
+		    	  <li class="nav-item">
+		    	    <a class="nav-link" href="#projects">Projects</a>
+		    	  </li>
+		    	  <li class="nav-item">
+		    	    <a class="nav-link" href="#contact">Contact</a>
+		    	  </li>
+		    	  <li class="nav-item">
+		    	    <a class="nav-link" href="#tools">Tools</a>
+		    	  </li>
+		    	</ul>
+		    </div>
 		  </div>
-
 		</nav>
 
 		<div id="landing" class="container p-5 my-5 bg-secondary">
