--- a/capstone1/index.html
+++ b/capstone1/index.html
@@ -17,7 +17,7 @@
 
 	<body class="bg-secondary">
 		<!--Navbar-->
-		<nav class="navbar navbar-expand-lg bg-dark">
+		<nav class="navbar navbar-expand-md bg-dark">
 
 		  <div class="container-fluid">
 		  	<button class="navbar-toggler ms-sm-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -292,7 +292,7 @@
 		    </div>
 		  </div>
 		</div>
-		  
+		 
 		<footer class="bg-dark text-white text-center">
 		    <span>Terms of Service</span>
 		    <span>|</span>
