Added code for capstone1

--- a/capstone1/index.html
+++ b/capstone1/index.html
@@ -104,7 +104,7 @@
 		</div>
 
 		<div id="projects" class="container p-5 my-5 bg-dark text-white text-center">
-		s  <h1>Projects</h1>
+		  <h1>Projects</h1>
 		  <p>These are the activities I made in Zuitt Bootcamp.</p>
 
 		  <div class="d-flex flex-wrap justify-content-evenly">
