--- a/capstone1/index.html
+++ b/capstone1/index.html
@@ -113,7 +113,7 @@
 		  	  <div class="card-body">
 		  	    <h5 class="card-title">Dev Skills and Dev Tools Introduction</h5>
 		  	    <p class="card-text">Developer tools are supplement efficiency tools that computer programmers use to make their lives easier.</p>
-		  	    <a href="https://gitlab.com/batch288-matos/frontend/-/tree/master/s06/activity" target="_blank" class="btn btn-primary">Github Repo Link</a>
+		  	    <a href="https://gitlab.com/batch288-matos/frontend/-/tree/master/s06/activity" target="_blank" class="btn btn-primary">Click here!</a>
 		  	  </div>
 		  	</div>
 
@@ -122,7 +122,7 @@
 		  	  <div class="card-body">
 		  	    <h5 class="card-title">Introduction and CSS Selectors</h5>
 		  	    <p class="card-text">A CSS selector is the first part of a CSS Rule. It is a pattern of elements and other terms that tell the browser which HTML elements should be selected to have the CSS property values inside the rule applied to them.</p>
-		  	    <a href="https://gitlab.com/batch288-matos/frontend/-/tree/master/s07/activity" target="_blank" class="btn btn-primary">Github Repo Link</a>
+		  	    <a href="https://gitlab.com/batch288-matos/frontend/-/tree/master/s07/activity" target="_blank" class="btn btn-primary">Click here!</a>
 		  	  </div>
 		  	</div>
 
@@ -131,7 +131,7 @@
 		  	  <div class="card-body">
 		  	    <h5 class="card-title">CSS - Common Styling Properties & Positioning</h5>
 		  	    <p class="card-text">The position property specifies the type of positioning method used for an element (static, relative, fixed, absolute or sticky).</p>
-		  	    <a href="https://gitlab.com/batch288-matos/frontend/-/tree/master/s08/activity" target="_blank" class="btn btn-primary">Github Repo Link</a>
+		  	    <a href="https://gitlab.com/batch288-matos/frontend/-/tree/master/s08/activity" target="_blank" class="btn btn-primary">Click here!</a>
 		  	  </div>
 		  	</div>
 
@@ -140,7 +140,7 @@
 		  	  <div class="card-body">
 		  	    <h5 class="card-title">CSS - Box Model</h5>
 		  	    <p class="card-text">The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content.</p>
-		  	    <a href="https://gitlab.com/batch288-matos/frontend/-/tree/master/s09/activity" target="_blank" class="btn btn-primary">Github Repo Link</a>
+		  	    <a href="https://gitlab.com/batch288-matos/frontend/-/tree/master/s09/activity" target="_blank" class="btn btn-primary">Click here!</a>
 		  	  </div>
 		  	</div>
 
@@ -149,7 +149,7 @@
 		  	  <div class="card-body">
 		  	    <h5 class="card-title">Bootstrap - Introduction and Simple Styles</h5>
 		  	    <p class="card-text">Bootstrap is the most popular HTML, CSS and JavaScript framework for developing a responsive and mobile friendly website. It is absolutely free to download and use. It is a front-end framework used for easier and faster web development.</p>
-		  	    <a href="https://gitlab.com/batch288-matos/frontend/-/tree/master/s09/activity" target="_blank" class="btn btn-primary">Github Repo Link</a>
+		  	    <a href="https://gitlab.com/batch288-matos/frontend/-/tree/master/s09/activity" target="_blank" class="btn btn-primary">Click here!</a>
 		  	  </div>
 		  	</div>
 
@@ -158,7 +158,7 @@
 		  	  <div class="card-body">
 		  	    <h5 class="card-title">Bootstrap - Grid System</h5>
 		  	    <p class="card-text">The Bootstrap Grid System allows up to 12 columns across the page. You can use all 12 columns individually or you can groups the columns together to create wider columns.</p>
-		  	    <a href="https://gitlab.com/batch288-matos/frontend/-/tree/master/s10/activity" target="_blank" class="btn btn-primary">Github Repo Link</a>
+		  	    <a href="https://gitlab.com/batch288-matos/frontend/-/tree/master/s10/activity" target="_blank" class="btn btn-primary">Click here!</a>
 		  	  </div>
 		  	</div>
 
@@ -167,7 +167,7 @@
 		  	  <div class="card-body">
 		  	    <h5 class="card-title">Bootstrap - Flex</h5>
 		  	    <p class="card-text">Flexbox is used to quickly manage the layout, alignment and sizing of grid columns, navigation, components, and more with a full suite of responsive flexbox utilities..</p>
-		  	    <a href="https://gitlab.com/batch288-matos/frontend/-/tree/master/s11/activity" target="_blank" class="btn btn-primary">Github Repo Link</a>
+		  	    <a href="https://gitlab.com/batch288-matos/frontend/-/tree/master/s11/activity" target="_blank" class="btn btn-primary">Click here!</a>
 		  	  </div>
 		  	</div>
 
@@ -176,7 +176,7 @@
 		  	  <div class="card-body">
 		  	    <h5 class="card-title">Bootstrap Components</h5>
 		  	    <p class="card-text">Bootstrap's components are largely built with a base-modifier nomenclature. We group as many shared properties as possible into a base class, like .btn , and then group individual styles for each variant into modifier classes, like .btn-primary or .btn-success.</p>
-		  	    <a href="https://gitlab.com/batch288-matos/frontend/-/tree/master/s12/activity" target="_blank" class="btn btn-primary">Github Repo Link</a>
+		  	    <a href="https://gitlab.com/batch288-matos/frontend/-/tree/master/s12/activity" target="_blank" class="btn btn-primary">Click here!</a>
 		  	  </div>
 		  	</div>
 		  </div>
