Added code for capstone1

--- a/capstone1/index.html
+++ b/capstone1/index.html
@@ -26,16 +26,16 @@
 		    <!-- Links -->
 		    <div class="collapse navbar-collapse" id="navbarNav">
 		    	<ul class="navbar-nav">
-		    	  <li class="nav-item">
+		    	  <li class="nav-item text-sm-center">
 		    	    <a class="nav-link" href="#landing">About</a>
 		    	  </li>
-		    	  <li class="nav-item">
+		    	  <li class="nav-item text-sm-center">
 		    	    <a class="nav-link" href="#projects">Projects</a>
 		    	  </li>
-		    	  <li class="nav-item">
+		    	  <li class="nav-item text-sm-center">
 		    	    <a class="nav-link" href="#tools">Tools</a>
 		    	  </li>
-		    	  <li class="nav-item">
+		    	  <li class="nav-item text-sm-center">
 		    	    <a class="nav-link" href="#contact">Contact</a>
 		    	  </li>
 		    	</ul>
