--- a/capstone1/index.html
+++ b/capstone1/index.html
@@ -20,22 +20,22 @@
 		<nav class="navbar navbar-expand-md bg-dark">
 
 		  <div class="container-fluid">
-		  	<button class="navbar-toggler ms-sm-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		  	<button class="navbar-toggler ms-auto ms-md-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		  	  <span class="navbar-toggler-icon"></span>
 		  	</button>
 		    <!-- Links -->
 		    <div class="collapse navbar-collapse" id="navbarNav">
 		    	<ul class="navbar-nav">
-		    	  <li class="nav-item text-sm-center">
+		    	  <li class="nav-item text-center text-md-center">
 		    	    <a class="nav-link" href="#landing">About</a>
 		    	  </li>
-		    	  <li class="nav-item text-sm-center">
+		    	  <li class="nav-item text-center text-md-center">
 		    	    <a class="nav-link" href="#projects">Projects</a>
 		    	  </li>
-		    	  <li class="nav-item text-sm-center">
+		    	  <li class="nav-item text-center text-md-center">
 		    	    <a class="nav-link" href="#tools">Tools</a>
 		    	  </li>
-		    	  <li class="nav-item text-sm-center">
+		    	  <li class="nav-item text-center text-md-center">
 		    	    <a class="nav-link" href="#contact">Contact</a>
 		    	  </li>
 		    	</ul>
@@ -229,7 +229,7 @@
 		<div id="contact" class="container p-5 my-5 bg-secondary text-white text-center">
 		  <h1>Contact Me</h1>
 		  
-		      <div class="bg-primary col-md-10 col-lg-8 m-auto">
+		      <div class="bg-primary col-xs-10 col-sm-9 col-md-8 col-lg-7 m-auto">
 		          <form class="col-11 m-auto">
 		            <div class="mb-3 form-group">
 		              <label for="full-name" class="form-label">Name</label>
@@ -291,8 +291,6 @@
 		          </form>
 		      </div>
 		  </div>
-		      
-		</div>
 		 
 		<footer class="bg-dark text-white text-center">
 		    <span>Terms of Service</span>
