--- a/capstone1/index.html
+++ b/capstone1/index.html
@@ -27,7 +27,7 @@
 		    <div class="collapse navbar-collapse" id="navbarNav">
 		    	<ul class="navbar-nav">
 		    	  <li class="nav-item text-center text-md-center">
-		    	    <a class="nav-link" href="#landing">About</a>
+		    	    <a class="nav-link" href="#landing">Home</a>
 		    	  </li>
 		    	  <li class="nav-item text-center text-md-center">
 		    	    <a class="nav-link" href="#projects">Projects</a>
