--- a/capstone1/index.html
+++ b/capstone1/index.html
@@ -21,7 +21,6 @@
 		<div class="container-fluid">
 			<a class="text-white navbar-brand" href="#">
 			  <img src="./images/navbarlogo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-			  OnePiece
 			</a>
 			<button class="navbar-toggler ms-auto ms-md-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -48,25 +47,25 @@
 
 	<div id="landing" class="container p-5 my-5">
 		<div class="row">
-			<div class="text-white col-12 col-sm-12 col-md-10 col-lg-6 text-center my-auto mx-auto">
+			<div class="text-white col-12 text-center my-auto mx-auto">
 				<img src="./images/profile-image.jpg" height="180" width="180" class="rounded-circle my-4">
 				<h1>Kenneth John Matos</h1>
 				<p class="fw-bolder">Full-Stack Web Developer</p>
 			</div>
 
-			<div class="col-12 col-sm-12 col-md-10 col-lg-6 my-auto mx-auto">
+			<!-- <div class="col-12 col-sm-12 col-md-10 col-lg-6 my-auto mx-auto"> -->
 				<!-- Carousel -->
-				<div id="demo" class="carousel slide" data-bs-ride="carousel">
+				<!-- <div id="demo" class="carousel slide" data-bs-ride="carousel"> -->
 
 					<!-- Indicators/dots -->
-					<div class="carousel-indicators">
+					<!-- <div class="carousel-indicators">
 						<button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
 						<button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
 						<button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-					</div>
+					</div> -->
 
 					<!-- The slideshow/carousel -->
-					<div class="carousel-inner rounded">
+					<!-- <div class="carousel-inner rounded">
 						<div class="carousel-item active">
 							<img src="./images/luffy.jpg" alt="HTML" class="d-block">
 						</div>
@@ -76,17 +75,17 @@
 						<div class="carousel-item rounded">
 							<img src="./images/sanji.jpg" alt="Node JS Server" class="d-block">
 						</div>
-					</div>
+					</div> -->
 
 					<!-- Left and right controls/icons -->
-					<button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+					<!-- <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
 						<span class="carousel-control-prev-icon"></span>
 					</button>
 					<button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
 						<span class="carousel-control-next-icon"></span>
 					</button>
 				</div>
-			</div>
+			</div> -->
 		</div>
 
 	</div>
