--- a/capstone1/index.html
+++ b/capstone1/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<nav class="navbar sticky-top navbar-expand-md bg">
+	<nav class="navbar sticky-top navbar-expand-lg">
 
 		<div class="container-fluid">
 			<a class="text-white navbar-brand" href="#">
@@ -52,42 +52,7 @@
 				<h1>Kenneth John Matos</h1>
 				<p class="fw-bolder">Full-Stack Web Developer</p>
 			</div>
-
-			<!-- <div class="col-12 col-sm-12 col-md-10 col-lg-6 my-auto mx-auto"> -->
-				<!-- Carousel -->
-				<!-- <div id="demo" class="carousel slide" data-bs-ride="carousel"> -->
-
-					<!-- Indicators/dots -->
-					<!-- <div class="carousel-indicators">
-						<button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-						<button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-						<button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-					</div> -->
-
-					<!-- The slideshow/carousel -->
-					<!-- <div class="carousel-inner rounded">
-						<div class="carousel-item active">
-							<img src="./images/luffy.jpg" alt="HTML" class="d-block">
-						</div>
-						<div class="carousel-item rounded">
-							<img src="./images/zorro.jpg" alt="Bootstrap" class="d-block">
-						</div>
-						<div class="carousel-item rounded">
-							<img src="./images/sanji.jpg" alt="Node JS Server" class="d-block">
-						</div>
-					</div> -->
-
-					<!-- Left and right controls/icons -->
-					<!-- <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-						<span class="carousel-control-prev-icon"></span>
-					</button>
-					<button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-						<span class="carousel-control-next-icon"></span>
-					</button>
-				</div>
-			</div> -->
 		</div>
-
 	</div>
 
 	<div id="projects" class="container p-5 my-5 text-white text-center rounded">
