modified code capstone1

--- a/capstone1/index.html
+++ b/capstone1/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<nav class="navbar sticky-top navbar-expand-lg">
+	<nav class="navbar sticky-top navbar-expand-md">
 
 		<div class="container-fluid">
 			<a class="text-white navbar-brand" href="#">
@@ -55,7 +55,7 @@
 		</div>
 	</div>
 
-	<div id="projects" class="container p-3 my-5 text-white text-center rounded">
+	<div id="projects" class="container p-1 my-5 text-white text-center rounded">
 		<h1>Projects</h1>
 		<p>These are the activities I made in Zuitt Bootcamp.</p>
 
